--- a/2-present-continuous-tense.html
+++ b/2-present-continuous-tense.html
@@ -27,30 +27,10 @@
     </li>
     <ul class="navbar-nav d-flex flex-column w-100">
       <li class="nav-item w-100">
-        <a href="2-present-continuous-tense.html#" class="text-menu pl-3">More Docs</a>
-      </li>
-      <li class="nav-item w-100">
-        <a href="quiz.html" class="nav-link text-light ">Fast Quiz</a>
-      </li>
-      <li class="nav-item w-100">
-        <a href="sentence.html" class="nav-link text-light">Sentence</a>
-      </li>
-      <li class="nav-item dropdown w-100">
-        <a href="2-present-continuous-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Verb<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
-        <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
-            <li><a href="auxiliary-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Auxiliary Verb</a></li>
-            <li><a href="transitive-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Transitive Verb</a></li>
-            <li><a href="instransitive-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Instransitive Verb</a></li>
-            <li><a href="regular-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Regular Verb</a></li>
-            <li><a href="iregular-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Iregular Verb</a></li> 
-            <li><a href="infinitive-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Infinitive Verb</a></li> 
-        </ul>
-      </li>
-      <li class="nav-item w-100">
         <a href="tenses.html" class="text-menu pl-3">Tenses</a>
       </li>
       <li class="nav-item dropdown w-100">
-        <a href="2-present-continuous-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Present<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
+        <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Present<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
             <li><a href="1-present-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Present  </a></li>
             <li><a href="2-present-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Present Continuous</a></li>
@@ -59,39 +39,32 @@
         </ul>
       </li>
       <li class="nav-item dropdown w-100">
-        <a href="2-present-continuous-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
+        <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
-            <li><a href="5-past-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Past  </a></li>
-            <li><a href="6-past-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Continuous</a></li>
-            <li><a href="7-past-perfect-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Perfect</a></li>
-            <li><a href="8-past-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Perfect <br>&nbsp;Continuous</a></li>
+            <li><a href="5-past.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Past  </a></li>
+            <li><a href="6-past-continuous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Continuous</a></li>
+            <li><a href="7-past-perfect.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Perfect</a></li>
+            <li><a href="8-past-perfect-continous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Perfect <br>&nbsp;Continuous</a></li>
         </ul>
       </li>
       <li class="nav-item dropdown w-100">
-        <a href="2-present-continuous-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
+        <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
-            <li><a href="9-future-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Future</a></li>
-            <li><a href="10-future-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Continuous</a></li>
-            <li><a href="11-future-perfect-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Perfect</a></li>
-            <li><a href="12-future-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Perfect <br>&nbsp;Continuous</a></li>
+            <li><a href="9-future.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Future</a></li>
+            <li><a href="10-future-continuous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Continuous</a></li>
+            <li><a href="11-future-perfect.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Perfect</a></li>
+            <li><a href="12-future-perfect-continuous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Perfect <br>&nbsp;Continuous</a></li>
         </ul>
       </li>
       <li class="nav-item dropdown w-100">
-        <a href="2-present-continuous-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
+        <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
-          <li><a href="13-past-future-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future</a></li>
-          <li><a href="14-past-future-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Continuous</a></li>
-          <li><a href="15-past-future-perfect-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Perfect</a></li>
+          <li><a href="13-past-future.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future</a></li>
+          <li><a href="14-past-future-continuous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Continuous</a></li>
+          <li><a href="15-past-future-perfect.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Perfect</a></li>
           <li><a href="16-past-future-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Perfect <br>&nbsp;Continuous</a></li>
         </ul>         
       </li>
-      <li class="nav-item w-100">
-        <a href="tenses.html" class="text-menu pl-3">Active & Passive Voice</a>
-      </li>
-      <li class="nav-item w-100">
-        <a href="activevoice.html" class="nav-link text-light">Acti & Pass Voice</a>
-      </li>
-    </ul>
   </nav>
 
   <!-- Content -->
@@ -101,13 +74,6 @@
         <div class="col-6">
           <button class="btn my-4" id="menu-btn"><i class="fas fa-bars"></i></button>
           <button class="btn my-4 close-btn d-none"><i class="fas fa-times"></i></button>
-        </div>
-        <div class="col-6">
-          <div class="button-group my-4 float">
-            <button title="Tosqa" class="btn btn-color btn-success"></button>
-            <button title="Blue" class="btn btn-color btn-blue"></button>
-            <button title="Dark" class="btn btn-color btn-dark"></button>  
-          </div>
         </div>
       </div>
       <div class="row">
