--- a/3-present-perfect-tense.html
+++ b/3-present-perfect-tense.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Engxzu - Present Perfect Tense</title>
+  <title>EngxRezu - Present Perfect Tense</title>
   <!-- bootstrap 5 css -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
   <!-- Font Awesome -->
@@ -22,81 +22,62 @@
     <div class="loading-animation"></div>
   </div>
   <nav class="navbar navbar-expand d-flex flex-column align-item-start" id="sidebar">
-      <li class="brand pl-3 w-100">
-            <a href="index.html" class="text-decoration-none d-flex align-items-center"><img src="assets/img/brand.png" class="img-fluid mr-2" width="40"alt="">engXzu</a>
+    <li class="brand pl-3 w-100">
+      <a href="index.html" class="text-decoration-none d-flex align-items-center"><img src="assets/img/brand.png" class="img-fluid mr-2" width="40"alt="">EngxRezu</a>
+    </li>
+      <ul class="navbar-nav d-flex flex-column w-100">
+      <li class="nav-item w-100">
+        <a href="tenses.html" class="text-menu pl-3">Tenses</a>
+      </li>
+      <li class="nav-item dropdown w-100">
+        <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Present<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
+        <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
+
+            <li><a href="1-present-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Present  </a></li>
+            <li><a href="2-present-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Present Continuous</a></li>
+            <li><a href="3-present-perfect-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Present Perfect</a></li>
+            <li><a href="4-present-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Present Perfect <br>&nbsp;Continuous</a></li>
+
+        </ul>
       </li>
 
-      <ul class="navbar-nav d-flex flex-column w-100">
-          <li class="nav-item w-100">
-            <a href="3-present-perfect-tense.html#" class="text-menu pl-3">More Docs</a>
-          </li>
-          <li class="nav-item w-100">
-            <a href="quiz.html" class="nav-link text-light">Fast Quiz</a>
-          </li>
-          <li class="nav-item w-100">
-            <a href="noun.html" class="nav-link text-light ">Noun</a>
-          </li>
-          <li class="nav-item w-100">
-            <a href="sentence.html" class="nav-link text-light ">Sentence</a>
-          </li>
-          <li class="nav-item dropdown w-100">
-              <a href="3-present-perfect-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Verb<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
-              <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
-                  <li><a href="auxiliary-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Auxiliary Verb</a></li>
-                  <li><a href="transitive-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Transitive Verb</a></li>
-                  <li><a href="instransitive-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Instransitive Verb</a></li>
-                  <li><a href="regular-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Regular Verb</a></li>
-                  <li><a href="iregular-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Iregular Verb</a></li> 
-                  <li><a href="infinitive-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Infinitive Verb</a></li> 
-              </ul>
-          </li>
-          <li class="nav-item w-100">
-            <a href="tenses.html" class="text-menu pl-3">Tenses</a>
-          </li>
-          <li class="nav-item dropdown w-100">
-              <a href="3-present-perfect-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Present<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
-              <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
-                  <li><a href="1-present-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Present  </a></li>
-                  <li><a href="2-present-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Present Continuous</a></li>
-                  <li><a href="3-present-perfect-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Present Perfect</a></li>
-                  <li><a href="4-present-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Present Perfect <br>&nbsp;Continuous</a></li>
-              </ul>
-          </li>
-          <li class="nav-item dropdown w-100">
-              <a href="3-present-perfect-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
-              <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
-                  <li><a href="5-past-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Past  </a></li>
-                  <li><a href="6-past-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Continuous</a></li>
-                  <li><a href="7-past-perfect-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Perfect</a></li>
-                  <li><a href="8-past-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Perfect <br>&nbsp;Continuous</a></li>
-              </ul>
-          </li>
-          <li class="nav-item dropdown w-100">
-              <a href="3-present-perfect-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
-              <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
-                  <li><a href="9-future-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Future</a></li>
-                  <li><a href="10-future-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Continuous</a></li>
-                  <li><a href="11-future-perfect-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Perfect</a></li>
-                  <li><a href="12-future-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Perfect <br>&nbsp;Continuous</a></li>
-              </ul>
-          </li>
-          <li class="nav-item dropdown w-100">
-              <a href="3-present-perfect-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
-              <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
-                  <li><a href="13-past-future-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future</a></li>
-                  <li><a href="14-past-future-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Continuous</a></li>
-                  <li><a href="15-past-future-perfect-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Perfect</a></li>
-                  <li><a href="16-past-future-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Perfect <br>&nbsp;Continuous</a></li>
-              </ul
- >         </li>
-          <li class="nav-item w-100">
-            <a href="tenses.html" class="text-menu pl-3">Active & Passive Voice</a>
-          </li>
-          <li class="nav-item w-100">
-            <a href="activevoice.html" class="nav-link text-light">Active Voice</a>
-          </li>
-      </ul>
+      <li class="nav-item dropdown w-100">
+        <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
+        <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
+
+            <li><a href="5-past.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Past  </a></li>
+            <li><a href="6-past-continuous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Continuous</a></li>
+            <li><a href="7-past-perfect.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Perfect</a></li>
+            <li><a href="8-past-perfect-continous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Perfect <br>&nbsp;Continuous</a></li>
+
+        </ul>
+      </li>
+
+      <li class="nav-item dropdown w-100">
+        <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
+        <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
+
+            <li><a href="9-future.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Future</a></li>
+            <li><a href="10-future-continuous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Continuous</a></li>
+            <li><a href="11-future-perfect.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Perfect</a></li>
+            <li><a href="12-future-perfect-continuous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Perfect <br>&nbsp;Continuous</a></li>
+
+        </ul>
+      </li>
+
+      <li class="nav-item dropdown w-100">
+        <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
+        <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
+
+          <li><a href="13-past-future.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future</a></li>
+          <li><a href="14-past-future-continuous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Continuous</a></li>
+          <li><a href="15-past-future-perfect.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Perfect</a></li>
+          <li><a href="16-past-future-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Perfect <br>&nbsp;Continuous</a></li>
+
+        </ul>         
+      </li>
   </nav>
+
 
   <!-- Content -->
   <section class="my-container">
@@ -106,23 +87,105 @@
           <button class="btn my-4" id="menu-btn"><i class="fas fa-bars"></i></button>
           <button class="btn my-4 close-btn d-none"><i class="fas fa-times"></i></button>
         </div>
-        <div class="col-6">
-          <div class="button-group my-4 float">
-            <button title="Tosqa" class="btn btn-color btn-success"></button>
-            <button title="Blue" class="btn btn-color btn-blue"></button>
-            <button title="Dark" class="btn btn-color btn-dark"></button>  
-          </div>
-        </div>
       </div>
       <div class="row">
         <div class="col isi-content">
           <h3>III. Present Perfect Tense</h3>
           <hr>
           <p class="arti-tense">Suatu pekerjaan atau peristiwa yang terjadi pada hari ini dan telah selesai</p>
-        <div class="row contoh-kal">
-          <div class="col">
-            <p class="text-danger" style="font-size: 22px;"><i class="fas fa-exclamation-circle mr-2 pt-1" style="font-size: 25px;"></i></i>Maaf kami tidak bisa memberikan materi ini !</p> 
+          <div class="rumus">
+            <p>Rumus: </p>
+            <div class="kata-sifat">
+              <span>Bukan kata kerja:</span>
+              <h5 class="fst-italic bg-white">SUBJECT + HAVE/HAS + BEEN + OBJECT</h5>
+            </div>
+            <div class="kata-kerja">
+              <span>Kata-Kerja:</span>
+              <h5 class="fst-italic bg-white">SUBJECT + HAVE/HAS + V.III + OBJECT</h5>
+            </div>
           </div>
+          </div>        
+          <div class="row contoh-kal">
+            <div class="col">
+              <p style="color: var(--darkblue)">Contoh Kalimat:</p> 
+            </div>
+            <div class="row contoh-kalimat">
+              <div class="row">
+                <div class="col-lg-6 main-k bg-white d-flex">
+                  <!-- 1 -->
+                  <div class="con-1">
+                    <h6>1.</h6>
+                  </div>
+                  <div class="con-2">
+                    <h6>(+): I have studied english for two months </h6>
+                    <h6>Aku telah belajar bahasa inggris selama 2 bulan</h6>
+                    <h6>(-): I have not studied english for two months </h6>
+                    <h6>Aku belum belajar bahasa inggris selama 2 bulan </h6>
+                    <h6>(?): Have you studied english for two months? </h6>
+                    <h6>Apakah kamu sudah belajar bahasa inggris selama 2 bulan</h6>               
+                  </div>
+                </div>
+                <div class="col-lg-6 main-k bg-white d-flex">
+                <!-- 2 -->
+                <div class="con-1">
+                    <h6>2.</h6>
+                </div>
+                <div class="con-2">
+                    <h6>(+): Rita has written two short stories this month </h6>
+                    <h6>Rita telah menulis 2 cerita pendek di bulan ini </h6>
+                    <h6>(-): Rita has not written two short stories this month </h6>
+                    <h6>Rita belum menulis 2 cerita pendek di bulan ini </h6>
+                    <h6>(?): Has rita written two short stories this month? </h6>
+                    <h6>Apakah rita telah menulis 2 cerita pendek di bulan ini? </h6>
+                </div>
+              </div>
+              <div class="col-lg-6 main-k bg-white d-flex">
+                <!-- 3 -->
+                <div class="con-1">
+                    <h6>3.</h6>
+                </div>
+                <div class="con-2">
+                  <h6>(+): I have seen her today </h6>
+                  <h6>Aku telah melihatnya hari ini</h6>
+                  <h6>(-): I have not seen her today</h6>
+                  <h6>Aku belum melihatnya hari ini </h6>
+                  <h6>(?): Have you seen her today?</h6>
+                  <h6>Apakah kamu melihatnya hari ini?</h6> 
+                </div>
+  
+              </div>
+              <div class="col-lg-6 main-k bg-white d-flex">
+                <!-- 4 -->
+                <div class="con-1">
+                    <h6>4.</h6>
+                </div>
+                <div class="con-2">
+                    <h6>(+): Juliet has lived in italy since 1303 </h6>
+                    <h6>Juliet telah tinggal di italia sejak 1303</h6>
+                    <h6>(-): Juliet has not lived in italy since 1303 </h6>
+                    <h6>Juliet sudah tidak tinggal di italia sejak 1303</h6>
+                    <h6>(?): Has juliet lived in italy since 1303 </h6>
+                    <h6>Apakah juliet sudah tinggal di italia sejak 1303?</h6>
+                </div>
+                
+              </div>
+              <div class="col-lg-6 main-k bg-white d-flex">
+                <!-- 5 -->
+                <div class="con-1">
+                    <h6>5.</h6>
+                </div>
+                <div class="con-2">
+                    <h6>(+): Kayla has eaten 2 kinds of fruits today </h6>
+                    <h6>Kayla telah memakan 2 macam buah hari ini</h6>
+                    <h6>(-): Kayla has not eaten 2 kinds of fruits today </h6>
+                    <h6>Kayla belum memakan 2 macam buah hari ini</h6>
+                    <h6>(?): Has kayla eaten 2 kinds of fruits today </h6>
+                    <h6>Apakah kayla sudah memakan 2 macam buah hari ini?</h6>
+                </div>
+              </div>         
+            </div>
+          </div>
+        </div>
         </div>
       </div>
     </div>  
