--- a/4-present-perfect-continuous-tense.html
+++ b/4-present-perfect-continuous-tense.html
@@ -79,37 +79,119 @@
       </li>
   </nav>
 
-
-
-  <!-- Content -->
-  <section class=" my-container">
+   <!-- Content -->
+   <section class="my-container">
     <div class="container">
       <div class="row">
         <div class="col-6">
           <button class="btn my-4" id="menu-btn"><i class="fas fa-bars"></i></button>
           <button class="btn my-4 close-btn d-none"><i class="fas fa-times"></i></button>
         </div>
-        <div class="col-6">
-          <div class="button-group my-4 float">
-            <button title="Tosqa" class="btn btn-color btn-success"></button>
-            <button title="Blue" class="btn btn-color btn-blue"></button>
-            <button title="Dark" class="btn btn-color btn-dark"></button>  
-          </div>
-        </div>
       </div>
       <div class="row">
         <div class="col isi-content">
           <h3>IV. Present Perfect Continuous Tense</h3>
           <hr>
-          <p class="arti-tense">Suatu pekerjaan atau peristiwa pada masa lampau sedang berlaku pada masa lampau pula.</p>
-          <div class="row contoh-kal">
-            <div class="col">
-              <p class="text-danger" style="font-size: 22px;"><i class="fas fa-exclamation-circle mr-2 pt-1" style="font-size: 25px;"></i></i>Maaf kami tidak bisa memberikan materi ini !</p> 
+          <p class="arti-tense">Suatu pekerjaan atau peristiwa yang terjadi pada masa lampau dan masih ada kaitannya dengan masa sekarang.</p>
+          <div class="rumus">
+            <p>Rumus: </p>
+            <div class="kata-sifat">
+              <span>Bukan kata kerja:</span>
+              <h5 class="fst-italic bg-white">SUBJECT + HAD + BEEN + VERB.I + ING + NOUN/ADJECTIVE/ADVERB + SINCE/FOR
+              </h5>
+            </div>
+            <div class="kata-kerja">
+              <span>Kata-Kerja:</span>
+              <h5 class="fst-italic bg-white">SUBJECT + HAD + BEEN + VERB.I + ING + SINCE/FOR</h5>
             </div>
           </div>
+          </div>        
+          <div class="row contoh-kal">
+            <div class="col">
+              <p style="color: var(--darkblue)">Contoh Kalimat:</p> 
+            </div>
+            <div class="row contoh-kalimat">
+              <div class="row">
+                <div class="col-lg-6 main-k bg-white d-flex">
+                  <!-- 1 -->
+                  <div class="con-1">
+                    <h6>1.</h6>
+                  </div>
+                  <div class="con-2">
+                    <h6>(+): I have been waiting you for twenty two days </h6>
+                    <h6>Aku telah dan sedang menunggu mu selama dua puluh dua hari</h6>
+                    <h6>(-): I have not been waiting you for twenty two days </h6>
+                    <h6>Aku sedang tidak menunggumu selama dua puluh dua hari </h6>
+                    <h6>(?): Have you been waiting me for twenty two days? </h6>
+                    <h6>Apakah kamu sedang dan sudah menungguku selama dua puluh dua hari</h6>               
+                  </div>
+                </div>
+                <div class="col-lg-6 main-k bg-white d-flex">
+                <!-- 2 -->
+                <div class="con-1">
+                    <h6>2.</h6>
+                </div>
+                <div class="con-2">
+                    <h6>(+): My brother have been studying in this school for two years </h6>
+                    <h6>Saudara laki laki ku sedang dan telah belajar di sekolah ini selama dua tahun </h6>
+                    <h6>(-): My brother have not been studying in this school for two years</h6>
+                    <h6>Saudara laki laki ku tidak sedang belajar di sekolah ini selama dua tahun </h6>
+                    <h6>(?): Have my brother studying in this school for two years </h6>
+                    <h6>Apakah saudara laki laki saya sedang dan telah belajar di sekolah ini selama dua tahun? </h6>
+                </div>
+              </div>
+              <div class="col-lg-6 main-k bg-white d-flex">
+                <!-- 3 -->
+                <div class="con-1">
+                    <h6>3.</h6>
+                </div>
+                <div class="con-2">
+                  <h6>(+): I have seen her today </h6>
+                  <h6>Aku telah melihatnya hari ini</h6>
+                  <h6>(-): I have not seen her today</h6>
+                  <h6>Aku belum melihatnya hari ini </h6>
+                  <h6>(?): Have you seen her today?</h6>
+                  <h6>Apakah kamu melihatnya hari ini?</h6> 
+                </div>
+  
+              </div>
+              <div class="col-lg-6 main-k bg-white d-flex">
+                <!-- 4 -->
+                <div class="con-1">
+                    <h6>4.</h6>
+                </div>
+                <div class="con-2">
+                    <h6>(+): Juliet has lived in italy since 1303 </h6>
+                    <h6>Juliet telah tinggal di italia sejak 1303</h6>
+                    <h6>(-): Juliet has not lived in italy since 1303 </h6>
+                    <h6>Juliet sudah tidak tinggal di italia sejak 1303</h6>
+                    <h6>(?): Has juliet lived in italy since 1303 </h6>
+                    <h6>Apakah juliet sudah tinggal di italia sejak 1303?</h6>
+                </div>
+                
+              </div>
+              <div class="col-lg-6 main-k bg-white d-flex">
+                <!-- 5 -->
+                <div class="con-1">
+                    <h6>5.</h6>
+                </div>
+                <div class="con-2">
+                    <h6>(+): Kayla has eaten 2 kinds of fruits today </h6>
+                    <h6>Kayla telah memakan 2 macam buah hari ini</h6>
+                    <h6>(-): Kayla has not eaten 2 kinds of fruits today </h6>
+                    <h6>Kayla belum memakan 2 macam buah hari ini</h6>
+                    <h6>(?): Has kayla eaten 2 kinds of fruits today </h6>
+                    <h6>Apakah kayla sudah memakan 2 macam buah hari ini?</h6>
+                </div>
+              </div>         
+            </div>
+          </div>
+        </div>
+        </div>
       </div>
     </div>  
   </section>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://code.iconify.design/2/2.0.4/iconify.min.js"></script>
