--- a/4-present-perfect-continuous-tense.html
+++ b/4-present-perfect-continuous-tense.html
@@ -46,10 +46,10 @@
         <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
 
-            <li><a href="5-past.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Past  </a></li>
-            <li><a href="6-past-continuous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Continuous</a></li>
-            <li><a href="7-past-perfect.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Perfect</a></li>
-            <li><a href="8-past-perfect-continous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Perfect <br>&nbsp;Continuous</a></li>
+            <li><a href="5-past-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Past  </a></li>
+            <li><a href="6-past-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Continuous</a></li>
+            <li><a href="7-past-perfect-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Perfect</a></li>
+            <li><a href="8-past-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Perfect <br>&nbsp;Continuous</a></li>
 
         </ul>
       </li>
@@ -132,11 +132,11 @@
                     <h6>2.</h6>
                 </div>
                 <div class="con-2">
-                    <h6>(+): My brother have been studying in this school for two years </h6>
+                    <h6>(+): My brother has been studying in this school for two years </h6>
                     <h6>Saudara laki laki ku sedang dan telah belajar di sekolah ini selama dua tahun </h6>
-                    <h6>(-): My brother have not been studying in this school for two years</h6>
+                    <h6>(-): My brother has not been studying in this school for two years</h6>
                     <h6>Saudara laki laki ku tidak sedang belajar di sekolah ini selama dua tahun </h6>
-                    <h6>(?): Have my brother studying in this school for two years </h6>
+                    <h6>(?): Has my brother studying in this school for two years </h6>
                     <h6>Apakah saudara laki laki saya sedang dan telah belajar di sekolah ini selama dua tahun? </h6>
                 </div>
               </div>
@@ -146,12 +146,12 @@
                     <h6>3.</h6>
                 </div>
                 <div class="con-2">
-                  <h6>(+): I have seen her today </h6>
-                  <h6>Aku telah melihatnya hari ini</h6>
-                  <h6>(-): I have not seen her today</h6>
-                  <h6>Aku belum melihatnya hari ini </h6>
-                  <h6>(?): Have you seen her today?</h6>
-                  <h6>Apakah kamu melihatnya hari ini?</h6> 
+                  <h6>(+): My mom has been watching netflix for 5 hours </h6>
+                  <h6>Ibu saya telah dan sedang menonton netflix selama 5 jam</h6>
+                  <h6>(-): My mom has not been watching netflix for 5 hours</h6>
+                  <h6>Ibu saya tidak sedang menonton netflix selama 5 jam </h6>
+                  <h6>(?): Has my mom been watching netflix for 5 hours?</h6>
+                  <h6>Apakah ibu saya telah dan sedang menonton netflix selama 5 jam?</h6> 
                 </div>
   
               </div>
@@ -161,12 +161,12 @@
                     <h6>4.</h6>
                 </div>
                 <div class="con-2">
-                    <h6>(+): Juliet has lived in italy since 1303 </h6>
-                    <h6>Juliet telah tinggal di italia sejak 1303</h6>
-                    <h6>(-): Juliet has not lived in italy since 1303 </h6>
-                    <h6>Juliet sudah tidak tinggal di italia sejak 1303</h6>
-                    <h6>(?): Has juliet lived in italy since 1303 </h6>
-                    <h6>Apakah juliet sudah tinggal di italia sejak 1303?</h6>
+                    <h6>(+): Rahmat has been making cakes for 3 hours and 30 minutes</h6>
+                    <h6>Rahmat telah dan sedang membuat kue selama 3 jam 30 menit</h6>
+                    <h6>(-): Rahmat has not been making cakes for 3 hours and 30 minutes</h6>
+                    <h6>Rahmat belum membuat kue selama 3 jam dan 30 menit</h6>
+                    <h6>(?): Has rahmat been making cakes for 3 hours and 30 minutes? </h6>
+                    <h6>Apakah rahmat telah dan sedang membuat kue selama 3 jam dan 30 menit?</h6>
                 </div>
                 
               </div>
@@ -176,12 +176,12 @@
                     <h6>5.</h6>
                 </div>
                 <div class="con-2">
-                    <h6>(+): Kayla has eaten 2 kinds of fruits today </h6>
-                    <h6>Kayla telah memakan 2 macam buah hari ini</h6>
-                    <h6>(-): Kayla has not eaten 2 kinds of fruits today </h6>
-                    <h6>Kayla belum memakan 2 macam buah hari ini</h6>
-                    <h6>(?): Has kayla eaten 2 kinds of fruits today </h6>
-                    <h6>Apakah kayla sudah memakan 2 macam buah hari ini?</h6>
+                    <h6>(+): I have been working here since last Desember</h6>
+                    <h6>Saya telah dan sedang bekerja disini sejak akhir desember</h6>
+                    <h6>(-): I have not been working here since last Desember </h6>
+                    <h6>Saya belum bekerja disini sejak akhir desember</h6>
+                    <h6>(?): Have i been working here since last Desember </h6>
+                    <h6>Apakah saya telah dan sedang bekerja disini sejak akhir desember?</h6>
                 </div>
               </div>         
             </div>
@@ -191,7 +191,6 @@
       </div>
     </div>  
   </section>
-
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://code.iconify.design/2/2.0.4/iconify.min.js"></script>
