--- a/3-present-perfect-tense.html
+++ b/3-present-perfect-tense.html
@@ -25,59 +25,47 @@
     <li class="brand pl-3 w-100">
       <a href="index.html" class="text-decoration-none d-flex align-items-center"><img src="assets/img/brand.png" class="img-fluid mr-2" width="40"alt="">EngxRezu</a>
     </li>
-      <ul class="navbar-nav d-flex flex-column w-100">
+    <ul class="navbar-nav d-flex flex-column w-100">
       <li class="nav-item w-100">
         <a href="tenses.html" class="text-menu pl-3">Tenses</a>
       </li>
       <li class="nav-item dropdown w-100">
         <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Present<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
-
             <li><a href="1-present-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Present  </a></li>
             <li><a href="2-present-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Present Continuous</a></li>
             <li><a href="3-present-perfect-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Present Perfect</a></li>
             <li><a href="4-present-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Present Perfect <br>&nbsp;Continuous</a></li>
-
         </ul>
       </li>
-
       <li class="nav-item dropdown w-100">
         <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
-
-            <li><a href="5-past.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Past  </a></li>
-            <li><a href="6-past-continuous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Continuous</a></li>
-            <li><a href="7-past-perfect.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Perfect</a></li>
-            <li><a href="8-past-perfect-continous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Perfect <br>&nbsp;Continuous</a></li>
-
+            <li><a href="5-past-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Past  </a></li>
+            <li><a href="6-past-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Continuous</a></li>
+            <li><a href="7-past-perfect-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Perfect</a></li>
+            <li><a href="8-past-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Perfect <br>&nbsp;Continuous</a></li>
         </ul>
       </li>
-
       <li class="nav-item dropdown w-100">
         <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
-
-            <li><a href="9-future.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Future</a></li>
-            <li><a href="10-future-continuous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Continuous</a></li>
-            <li><a href="11-future-perfect.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Perfect</a></li>
-            <li><a href="12-future-perfect-continuous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Perfect <br>&nbsp;Continuous</a></li>
-
+            <li><a href="9-future-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Future</a></li>
+            <li><a href="10-future-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Continuous</a></li>
+            <li><a href="11-future-perfect-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Perfect</a></li>
+            <li><a href="12-future-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Perfect <br>&nbsp;Continuous</a></li>
         </ul>
       </li>
-
       <li class="nav-item dropdown w-100">
         <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
-
-          <li><a href="13-past-future.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future</a></li>
-          <li><a href="14-past-future-continuous.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Continuous</a></li>
-          <li><a href="15-past-future-perfect.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Perfect</a></li>
+          <li><a href="13-past-future-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future</a></li>
+          <li><a href="14-past-future-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Continuous</a></li>
+          <li><a href="15-past-future-perfect-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Perfect</a></li>
           <li><a href="16-past-future-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Perfect <br>&nbsp;Continuous</a></li>
-
         </ul>         
       </li>
   </nav>
-
 
   <!-- Content -->
   <section class="my-container">
