--- a/5-past-tense.html
+++ b/5-past-tense.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>engXzu - Past Tense</title>
+  <title>EngxRezu - Past Tense</title>
   <!-- bootstrap 5 css -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
   <!-- Font Awesome -->
@@ -23,34 +23,14 @@
   </div>
   <nav class="navbar navbar-expand d-flex flex-column align-item-start" id="sidebar">
     <li class="brand pl-3 w-100">
-      <a href="index.html" class="text-decoration-none d-flex align-items-center"><img src="assets/img/brand.png" class="img-fluid mr-2" width="40"alt="">engXzu</a>
+      <a href="index.html" class="text-decoration-none d-flex align-items-center"><img src="assets/img/brand.png" class="img-fluid mr-2" width="40"alt="">EngxRezu</a>
     </li>
     <ul class="navbar-nav d-flex flex-column w-100">
-      <li class="nav-item w-100">
-        <a href="5-past-tense.html#" class="text-menu pl-3">More Docs</a>
-      </li>
-      <li class="nav-item w-100">
-        <a href="quiz.html" class="nav-link text-light ">Fast Quiz</a>
-      </li>
-      <li class="nav-item w-100">
-        <a href="sentence.html" class="nav-link text-light">Sentence</a>
-      </li>
-      <li class="nav-item dropdown w-100">
-        <a href="5-past-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Verb<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
-        <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
-            <li><a href="auxiliary-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Auxiliary Verb</a></li>
-            <li><a href="transitive-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Transitive Verb</a></li>
-            <li><a href="instransitive-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Instransitive Verb</a></li>
-            <li><a href="regular-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Regular Verb</a></li>
-            <li><a href="iregular-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Iregular Verb</a></li> 
-            <li><a href="infinitive-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Infinitive Verb</a></li> 
-        </ul>
-      </li>
       <li class="nav-item w-100">
         <a href="tenses.html" class="text-menu pl-3">Tenses</a>
       </li>
       <li class="nav-item dropdown w-100">
-        <a href="5-past-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Present<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
+        <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Present<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
             <li><a href="1-present-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Present  </a></li>
             <li><a href="2-present-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Present Continuous</a></li>
@@ -59,7 +39,7 @@
         </ul>
       </li>
       <li class="nav-item dropdown w-100">
-        <a href="5-past-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
+        <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
             <li><a href="5-past-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Past  </a></li>
             <li><a href="6-past-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Continuous</a></li>
@@ -68,7 +48,7 @@
         </ul>
       </li>
       <li class="nav-item dropdown w-100">
-        <a href="5-past-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
+        <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
             <li><a href="9-future-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Future</a></li>
             <li><a href="10-future-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Continuous</a></li>
@@ -77,7 +57,7 @@
         </ul>
       </li>
       <li class="nav-item dropdown w-100">
-        <a href="5-past-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
+        <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
           <li><a href="13-past-future-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future</a></li>
           <li><a href="14-past-future-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Continuous</a></li>
@@ -85,13 +65,6 @@
           <li><a href="16-past-future-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Perfect <br>&nbsp;Continuous</a></li>
         </ul>         
       </li>
-      <li class="nav-item w-100">
-        <a href="tenses.html" class="text-menu pl-3">Active & Passive Voice</a>
-      </li>
-      <li class="nav-item w-100">
-        <a href="activevoice.html" class="nav-link text-light">Acti & Pass Voice</a>
-      </li>
-    </ul>
   </nav>
   
   <!-- Content -->
@@ -101,13 +74,6 @@
         <div class="col-6">
           <button class="btn my-4" id="menu-btn"><i class="fas fa-bars"></i></button>
           <button class="btn my-4 close-btn d-none"><i class="fas fa-times"></i></button>
-        </div>
-        <div class="col-6">
-          <div class="button-group my-4 float">
-            <button title="Tosqa" class="btn btn-color btn-success"></button>
-            <button title="Blue" class="btn btn-color btn-blue"></button>
-            <button title="Dark" class="btn btn-color btn-dark"></button>  
-          </div>
         </div>
       </div>
       <div class="row ">
@@ -153,11 +119,11 @@
               </div>
               <div class="con-2">
                <h6>(+): He got much money</h6>
-                <h6>Dia memperoleh banyak uang</h6>
+                <h6>Dia telah memperoleh banyak uang</h6>
                 <h6>(-): He did not get much money </h6>
                 <h6>Dia tidak mendapat banyak uang </h6>
                 <h6>(?): Did he get much money?</h6>
-                <h6>Apakah dia mendapat banyak uang?</h6>   
+                <h6>Apakah dia telah mendapat banyak uang?</h6>   
               </div>
             </div>
             <div class="col-lg-6 main-k d-flex">
@@ -167,11 +133,11 @@
               </div>
               <div class="con-2">
                 <h6>(+): The teacher wrote on the black board</h6>
-                <h6>Guru menulis di papan tulis</h6>
+                <h6>Guru telah menulis di papan tulis</h6>
                 <h6>(-): The teacher did not write on the black board</h6>
                 <h6>Guru tidak menulis di papan tulis </h6>
                 <h6>(?): Did teacher write on the black board? </h6>
-                <h6>Apakah guru menulis di papan tulis?</h6>
+                <h6>Apakah guru telah menulis di papan tulis?</h6>
               </div>
             </div>
             <div class="col-lg-6 main-k d-flex">
@@ -181,11 +147,11 @@
               </div>
               <div class="con-2">
                 <h6>(+): The students played in the school yard</h6>
-                <h6>Pelajar-pelajar bermain di halaman sekolah</h6>
+                <h6>Pelajar-pelajar telah bermain di halaman sekolah</h6>
                 <h6>(-): The students did not play in the school yard </h6>
                 <h6>Pelajar-pelajar tidak bermain di halaman sekolah</h6>
                 <h6>(?): Did the students play in the school yard?</h6>
-                <h6>Apakah pelajar-pelajar bermain di halaman sekolah?</h6>   
+                <h6>Apakah pelajar-pelajar telah bermain di halaman sekolah?</h6>   
               </div>
               &nbsp;
             </div>
@@ -196,11 +162,11 @@
               </div>
               <div class="con-2">
                 <h6>(+): Ali went to Jakarta</h6>
-                <h6>Ali berangkat ke Jakarta </h6>
+                <h6>Ali telah berangkat ke Jakarta </h6>
                 <h6>(-): Ali did not go to Jakarta</h6>
                 <h6>Ali tidak berangkat ke Jakarta</h6>
                 <h6>(?): Did Ali go to Jakarta? </h6>
-                <h6>Apakah Ali berangkat ke Jakarta?</h6>  
+                <h6>Apakah Ali telah berangkat ke Jakarta?</h6>  
               </div>              
             </div>         
           </div>
