--- a/9-future-tense.html
+++ b/9-future-tense.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>engXzu - Future Tense</title>
+  <title>EngxRezu - Future Tense</title>
   <!-- bootstrap 5 css -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
   <!-- Font Awesome -->
@@ -22,34 +22,14 @@
   </div>
   <nav class="navbar navbar-expand d-flex flex-column align-item-start" id="sidebar">
     <li class="brand pl-3 w-100">
-      <a href="index.html" class="text-decoration-none d-flex align-items-center"><img src="assets/img/brand.png" class="img-fluid mr-2" width="40"alt="">engXzu</a>
+      <a href="index.html" class="text-decoration-none d-flex align-items-center"><img src="assets/img/brand.png" class="img-fluid mr-2" width="40"alt="">EngxRezu</a>
     </li>
     <ul class="navbar-nav d-flex flex-column w-100">
-      <li class="nav-item w-100">
-        <a href="9-future-tense.html#" class="text-menu pl-3">More Docs</a>
-      </li>
-      <li class="nav-item w-100">
-        <a href="quiz.html" class="nav-link text-light ">Fast Quiz</a>
-      </li>
-      <li class="nav-item w-100">
-        <a href="sentence.html" class="nav-link text-light">Sentence</a>
-      </li>
-      <li class="nav-item dropdown w-100">
-        <a href="9-future-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Verb<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
-        <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
-            <li><a href="auxiliary-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Auxiliary Verb</a></li>
-            <li><a href="transitive-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Transitive Verb</a></li>
-            <li><a href="instransitive-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Instransitive Verb</a></li>
-            <li><a href="regular-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Regular Verb</a></li>
-            <li><a href="iregular-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Iregular Verb</a></li> 
-            <li><a href="infinitive-verb.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Infinitive Verb</a></li> 
-        </ul>
-      </li>
       <li class="nav-item w-100">
         <a href="tenses.html" class="text-menu pl-3">Tenses</a>
       </li>
       <li class="nav-item dropdown w-100">
-        <a href="9-future-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Present<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
+        <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Present<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
             <li><a href="1-present-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Present  </a></li>
             <li><a href="2-present-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Present Continuous</a></li>
@@ -58,7 +38,7 @@
         </ul>
       </li>
       <li class="nav-item dropdown w-100">
-        <a href="9-future-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
+        <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past<span class="iconify" data-icon="bytesize:chevron-bottom" data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
             <li><a href="5-past-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Past  </a></li>
             <li><a href="6-past-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Continuous</a></li>
@@ -67,7 +47,7 @@
         </ul>
       </li>
       <li class="nav-item dropdown w-100">
-        <a href="9-future-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
+        <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
             <li><a href="9-future-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Simple Future</a></li>
             <li><a href="10-future-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Future Continuous</a></li>
@@ -76,7 +56,7 @@
         </ul>
       </li>
       <li class="nav-item dropdown w-100">
-        <a href="9-future-tense.html#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
+        <a href="#" class="nav-link text-light" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Past Future<span class="iconify" data-icon="bytesize:chevron-bottom"data-width="17" data-height="17"></span></a>
         <ul class="dropdown-menu w-100" aria-labelledby="navbarDropdown">
           <li><a href="13-past-future-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future</a></li>
           <li><a href="14-past-future-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Continuous</a></li>
@@ -84,15 +64,7 @@
           <li><a href="16-past-future-perfect-continuous-tense.html" class="dropdown-item text-light pl-3 p-2">&nbsp;Past Future Perfect <br>&nbsp;Continuous</a></li>
         </ul>         
       </li>
-      <li class="nav-item w-100">
-        <a href="tenses.html" class="text-menu pl-3">Active & Passive Voice</a>
-      </li>
-      <li class="nav-item w-100">
-        <a href="activevoice.html" class="nav-link text-light">Acti & Pass Voice</a>
-      </li>
-    </ul>
   </nav>
-
   <!-- Content -->
   <section class="my-container">
     <div class="container">
@@ -100,13 +72,6 @@
         <div class="col-6">
           <button class="btn my-4" id="menu-btn"><i class="fas fa-bars"></i></button>
           <button class="btn my-4 close-btn d-none"><i class="fas fa-times"></i></button>
-        </div>
-        <div class="col-6">
-          <div class="button-group my-4 float">
-            <button title="Tosqa" class="btn btn-color btn-success"></button>
-            <button title="Blue" class="btn btn-color btn-blue"></button>
-            <button title="Dark" class="btn btn-color btn-dark"></button>  
-          </div>
         </div>
       </div>
       <div class="row ">
